css/app.scss
// palette
$dark-primary-color: #455A64;
$default-primary-color: #607D8B;
$light-primary-color: #CFD8DC;
$text-primary-color: #FFFFFF;
$accent-color: #FFC107;
$primary-text-color: #212121;
$secondary-text-color: #727272;
$divider-color: #B6B6B6;

@mixin border-radius-generator($radius) {
    -webkit-border-radius: $radius;
    -moz-border-radius: $radius;
    -o-border-radius: $radius;
    border-radius: $radius;
}

@mixin transition-generator($params) {
    -webkit-transition: $params;
    -moz-transition: $params;
    -o-transition: $params;
    transition: $params;
}

$scroll-to-top-btn-side-length: 40px;

#scrollToTopBtn {
    width: $scroll-to-top-btn-side-length;
    height: $scroll-to-top-btn-side-length;
    position: fixed;
    z-index: -10;
    bottom: 20px;
    right: 20px;
    display: block;
    text-decoration: none !important;
    text-align: center;
    @include border-radius-generator(50%);
    @include transition-generator(all 600ms linear);
    opacity: 0;

    &.show-scroll-to-top-btn {
        z-index: 20;
        opacity: 0.4;
        &:hover {
            opacity: 0.7;
        }
    }

    span {
        color: $default-primary-color;
        font-size: 3em;
        line-height: $scroll-to-top-btn-side-length;
    }
}

body {
    font-size: 16px;
    background-color: $light-primary-color;

    .navbar {
        background-color: $dark-primary-color;

        .navbar-header {
            width: 500px;

            span {
                position: absolute;
                top: -10px;
                left: 60px;
                color: $light-primary-color;
                font-size: 45px;
            }

            .navbar-brand {
                float: none;
                height: 50px;
                line-height: 50px;
                padding: 0;
                color: $light-primary-color;

                &.navbar-brand-img {
                    width: 40px;

                    img {
                        width: 40px;
                        height: 40px;
                        border: 2px solid $light-primary-color;
                        margin-left: 10px;
                        display: inline-block;
                        @include border-radius-generator(5px);
                    }

                }

                &.navbar-brand-txt {
                    //width: 800px;
                    margin-left: 35px;
                }

                &:hover, &:focus, &:active {
                    color: $accent-color;

                    img {
                        border-color: $accent-color;
                    }
                }
            }
        }
    }

    .main-div {
        margin-top: 50px;
        margin-bottom: 20px;
        padding-top: 20px;

        .nav-tabs {
            margin-left: 20px;

            li {

                &.small-tab {
                    font-size: 12px;
                }

                &.active {
                    a {
                        color: $accent-color;
                        background-color: $text-primary-color;
                        border-bottom-color: $text-primary-color;
                    }
                }


                a {
                    color: $default-primary-color;
                    background-color: $divider-color;
                    border-color: $dark-primary-color;

                    &:hover, &:active, &:focus {
                        color: $accent-color;
                        border-top-color: $dark-primary-color;
                        border-left-color: $dark-primary-color;
                        border-right-color: $dark-primary-color;
                    }
                }
            }
        }

        .content-div {
            width: 100%;
            margin-top: -1px;
            padding: 10px;
            //min-height: 642px;
            background-color: $text-primary-color;
            border: 1px solid $dark-primary-color;
            @include border-radius-generator(5px);

            .text-div {
                outline: none;
                resize: none;
                width: 100%;
                //min-height: 615px;
                line-height: 20px;
                color: $dark-primary-color;
                border: none;
            }

            .markdown-div {
                //min-height: 615px;
                margin-bottom: 4px;


            }
        }
    }
}

